// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledInput renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderRadius": 27,
        "borderWidth": 1,
        "padding": 17,
        "paddingBottom": 3,
        "paddingTop": 7,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.02,
        "shadowRadius": 5,
      },
      undefined,
      Object {
        "borderColor": "#DADADA",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    editable={true}
    enablesReturnKeyAutomatically={true}
    enforceLowercase={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#DADADA"
    rejectResponderTermination={true}
    returnKeyType="done"
    selectionColor="#007AFF"
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 13,
          "height": 27,
          "letterSpacing": 1.45,
          "width": 278,
        },
        undefined,
      ]
    }
    trim={true}
    underlineColorAndroid="transparent"
  />
</View>
`;

exports[`StyledInput renders correctly with border color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderRadius": 27,
        "borderWidth": 1,
        "padding": 17,
        "paddingBottom": 3,
        "paddingTop": 7,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.02,
        "shadowRadius": 5,
      },
      undefined,
      Object {
        "borderColor": "#33CF8B",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCorrect={false}
    borderColor="#33CF8B"
    editable={true}
    enablesReturnKeyAutomatically={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#DADADA"
    rejectResponderTermination={true}
    selectionColor="#007AFF"
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 13,
          "height": 27,
          "letterSpacing": 1.45,
          "width": 278,
        },
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
  />
</View>
`;
